--- a/src/app/views/create-account-view/create-account-view.component.html
+++ b/src/app/views/create-account-view/create-account-view.component.html
@@ -1,5 +1,5 @@
-<div class="image">1</div>
 <div class="content">
-  <h2>CRIAR CONTA</h2>
+  <img src="assets/img/logo.png">
+  <h1 style="font-family: 'Lemon', serif; margin-top: 20px;">Criar conta</h1>
   <app-create-account-box></app-create-account-box>
 </div>
