--- a/src/app/views/index-view/index-view.component.scss
+++ b/src/app/views/index-view/index-view.component.scss
@@ -1,6 +1,7 @@
 :host {
-  display: grid;
-  grid-template-columns: 1fr 1fr;
+  display: flex;
+  align-items: center;
+  justify-content: center;
   height: 100%;
   width: 100%;
 }
