--- a/src/app/views/login-account-view/login-account-view.component.html
+++ b/src/app/views/login-account-view/login-account-view.component.html
@@ -1,5 +1,5 @@
-<div class="image" style="background-image: url(assets/img/sinbg.png);"></div>
 <div class="content">
-  <h2>ENTRAR</h2>
+  <img src="assets/img/logo.png">
+  <h1 style="font-family: 'Lemon', serif; margin-top: 20px;">Login</h1>
   <app-login-account-box></app-login-account-box>
 </div>
