--- a/src/app/layouts/site-layout/site-layout.component.scss
+++ b/src/app/layouts/site-layout/site-layout.component.scss
@@ -6,6 +6,8 @@ section {
   justify-content: flex-start;
   align-items: center;
   background-color: rgb(240,240,240);
+  background-size: cover;
+  background-position: center center;
 }
 
 .header {
@@ -51,10 +53,37 @@ section {
 .footer {
   position: fixed;
   bottom: 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
+  padding: 0;
+
+  .content {
+    width: 100%;
+    height: 100%;
+    background-image: linear-gradient(rgba(0,0,0,0.2), rgba(0,0,0,0.5));
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    padding: 0 50px;
+
+    .copyright {
+      display: flex;
+      flex-direction: column;
+      align-items: flex-start;
+      justify-content: center;
+    }
+
+    .vote {
+      display: flex;
+      justify-content: flex-end;
+      align-items: center;
+
+      .btn-vote {
+        width: 88px;
+        height: 51px;
+        margin-left: 30px;
+      }
+    }
+  }
+
+
 
   span {
     font-size: 12px;
@@ -64,4 +93,22 @@ section {
 .content {
   width: 80%;
   height: calc(100vh - 64px);
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+
+  .image {
+    display: flex;
+    justify-content: center;
+    align-items: flex-end;
+    background-position: center bottom;
+    background-repeat: no-repeat;
+    background-size: contain;
+  }
+
+  .router {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
 }
