--- a/src/app/views/recover-account-view/recover-account-view.component.html
+++ b/src/app/views/recover-account-view/recover-account-view.component.html
@@ -1,5 +1,5 @@
-<div class="image">1</div>
 <div class="content">
-  <h2>RECUPERAR CONTA</h2>
+  <img src="assets/img/logo.png">
+  <h1 style="font-family: 'Lemon', serif; margin-top: 20px;">Recuperar Conta</h1>
   <app-recover-account-box></app-recover-account-box>
 </div>
