--- a/src/app/views/reset-account-view/reset-account-view.component.html
+++ b/src/app/views/reset-account-view/reset-account-view.component.html
@@ -1,5 +1,5 @@
-<div class="image">1</div>
 <div class="content">
-  <h2>REDEFINIR SENHA</h2>
+  <img src="assets/img/logo.png">
+  <h1 style="font-family: 'Lemon', serif; margin-top: 20px;">Redefinir Senha</h1>
   <app-reset-account-box></app-reset-account-box>
 </div>
